<resources>
    <string name="app_name">Phone Shop</string>
    <string name="information_product">Product Information</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="information_shop">Cell Phone x - Nơi gửi chọn niềm tin</string>
    <string name="information_shop1">Mail: @cellphonex@gmail.com.vn - SĐT: 0987654321 </string>
    <string name="channel_name">channel1</string>
    <string name="channel_description">this is channel1</string>
    <string name="apiKey">AIzaSyChHLPQjIJpNLYBnqUytPdZZ-_ezK1eOiY</string>
</resources>