<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="294dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/backgound_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_product"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_launcher_foreground"/>

            <LinearLayout
                android:id="@+id/information_product"
                android:layout_width="235dp"
                android:layout_height="274dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/information_product"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/decrementButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrement"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:textSize="40sp"
                app:backgroundTint="@color/white" />

            <EditText
                android:id="@+id/amout"
                android:layout_width="85dp"
                android:layout_height="69dp"
                android:layout_gravity="bottom|center_horizontal"
                android:text="1"
                android:textAlignment="center"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/incrementButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increment"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:textSize="40sp"
                app:backgroundTint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:id="@+id/add_cart"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginEnd="9dp"
                android:background="@drawable/background_button_addtocart"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="40dp"
                    android:src="@drawable/addtocart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:text="Add to cart"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buy_now"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@drawable/background_button_buynow"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="51dp"
                    android:layout_height="40dp"
                    android:src="@drawable/buynow" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:text="Buy now"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/information_shop"
            android:textSize="20dp"
            android:layout_gravity="bottom|center_horizontal"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/information_shop1"
            android:textSize="20dp"
            android:layout_gravity="bottom|center_horizontal"
            android:textAlignment="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>